--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -386,6 +386,21 @@ section {
   }
 }
 
+/* GRID */
+.service-grid-container {
+  display: grid;
+}
+
+.service-grid-item {
+  width: 200px;
+  height: 50px;
+  background-color: orange;
+  border: solid;
+  color: black;
+}
+
+
+
 /* MEDIA QUERY FOR TABLETS AND SMALLER */
 @media screen and (max-width: 768px) {
   section {
